# smart-suction

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
src/capcup/: best_model.pt  data_debug.ipynb  data_process.ipynb  data_process_scio.ipynb  data_process_v4.ipynb  download_drive_data.py  eval_data_formatter.py  forward_inverse_model.ipynb  ground_truth_runner.py  ground_truth_viz.py  inverse_lstm_model.ipynb  lstm_model.pt  offset_generator.py  record_serial.py  sciosense_data_formatter.py  serial_data_formatter.py  suction_cup_hypotheses.ipynb  test_conductive_cup.ipynb  test_conductive_cup_ring.ipynb  test_conversion_rate.ipynb  test_electrode_cup.ipynb  test_mux_board_steps.ipynb  test_printed_cup.ipynb  test_self_shielding.ipynb  test_silver_paint.ipynb
src/capcup/data_collection/: read_serial.py
src/capcup/jubliee_scripting/: concentric_cycles.py  cup_configs.py  ground_truth_runner.py
src/smart-suction/: download_drive_data.py
tests/: test_download_drive_data.py  test_eval_data_formatter.py
