[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-suction"
version = "0.0.1"
authors = [
  { name="Alex Choi", email="alexander.e.choi@gmail.com" },
]
description = "A package for recording and analyzing capacitance data from the smart suction cup project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aechoi/smart-suction"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smart-suction"]
